# fastapi

./: README.md
fastapi/: cookiecutter.json
fastapi/{{cookiecutter.name}}/: README.md  poe_tasks.toml  pyproject.toml
fastapi/{{cookiecutter.name}}/docker/: Dockerfile  docker-compose.yml
fastapi/{{cookiecutter.name}}/tests/: __init__.py
fastapi/{{cookiecutter.name}}/tests/routers/: test_health.py
fastapi/{{cookiecutter.name}}/{{cookiecutter.package_name}}/: __main__.py  app.py  app_settings.py
fastapi/{{cookiecutter.name}}/{{cookiecutter.package_name}}/config/: loading.py
scaffolded/webserver/: poe_tasks.toml  pyproject.toml
scaffolded/webserver/tests/routers/: test_health.py
scaffolded/webserver/webserver/: app.py  dependencies.py
scaffolded/webserver/webserver/config/: loading.py
